--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -131,6 +131,10 @@
                 (click)="openReportDialog('administrative')">
                 <i class="material-icons">assignment_ind</i>
             </button>
+            <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'" mat-raised-button type="submit" class="btn btn-primary btn-raised"
+                (click)="test()">
+                <i class="material-icons">face</i>
+            </button>
         </div>
     </div>
     <hr id="dashLine">
