--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -165,12 +165,12 @@
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
-                            <mat-panel-title>מערכת אחיות </mat-panel-title>
+                            <mat-panel-title>תוכנת דיווח סיעודית</mat-panel-title>
                             <mat-panel-description> </mat-panel-description>
                         </mat-expansion-panel-header>
                         <ul>
                             <li class="nav-item">
-                                <a class="nav-link" routerLink="nursesmanagedashboard">ניהול דוחות</a>
+                                <a class="nav-link" routerLink="nursesmanagedashboard">תוכנת דיווח סיעוד</a>
                             </li>
                         </ul>
                     </mat-expansion-panel>
