--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,11 +1,13 @@
-<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup">
+<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup" *ngIf="visible">
     <div class="modal-header text-right">
         <div class="row mt-3">
-            <div class="col-4" style="font-family: 'Roboto';">
+            <div class="col-4">
                 {{date2}} - {{time2}} - {{userFullName}}
             </div>
-            <div class="col-3" style="font-family: 'Roboto';">
-                {{ReportGroup.controls['PatientName'].value}}<br> {{ReportGroup.controls['PatientNurseStatus'].value}}
+            <div class="col-3">
+                <span style="font-size: 20px;"
+                    *ngIf="reportType == 'clinical'">{{ReportGroup.controls['PatientName'].value}}</span><br> <span
+                    *ngIf="reportType == 'clinical'">{{ReportGroup.controls['PatientNurseStatus'].value}}</span>
             </div>
             <div class="col-5">
                 <button matTooltip="שליחה לנמען" mat-raised-button type="button" id="BtnStyle"
@@ -40,7 +42,7 @@
             <div class="col-12">
                 <mat-form-field class="example-full-width" appearance="fill">
                     <mat-label>אבחנה</mat-label>
-                    <textarea matInput style="font-family: 'Roboto';" formControlName="Diagnosis"
+                    <textarea matInput style="font-family: 'math';font-weight: bolder;font-size: 18px;" formControlName="Diagnosis"
                         placeholder="אבחנה"></textarea>
                 </mat-form-field>
             </div>
@@ -50,11 +52,11 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>נושא/מחלקה</mat-label>
-                        <input type="text" aria-label="department" style="font-family: 'Roboto';" matInput
+                        <input type="text" aria-label="department" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="departmentfilter" [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
                             <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
-                                style="font-family: 'Roboto';">
+                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
                                 {{dept.Dept_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -65,11 +67,11 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>קטגוריה</mat-label>
-                        <input type="text" aria-label="category" style="font-family: 'Roboto';" matInput
+                        <input type="text" aria-label="category" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="categoryfilter" [matAutocomplete]="auto3">
                         <mat-autocomplete #auto3="matAutocomplete">
                             <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
-                                style="font-family: 'Roboto';">
+                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
                                 {{cat.Cat_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -80,11 +82,11 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>תת קטגוריה</mat-label>
-                        <input type="text" aria-label="subcategory" style="font-family: 'Roboto';" matInput
+                        <input type="text" aria-label="subcategory" style="font-family: 'math';font-weight: bolder;font-size: 18px;" matInput
                             [formControl]="subcategoryfilter" [matAutocomplete]="auto4">
                         <mat-autocomplete #auto4="matAutocomplete">
                             <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name"
-                                style="font-family: 'Roboto';">
+                                style="font-family: 'math';font-weight: bolder;font-size: 18px;">
                                 {{subcat.SubCat_Name}}
                             </mat-option>
                         </mat-autocomplete>
@@ -95,8 +97,8 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>סטטוס</mat-label>
-                        <mat-select formControlName="ReportStatus" style="font-family: 'Roboto';">
-                            <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'Roboto';">
+                        <mat-select formControlName="ReportStatus" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
+                            <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'math';font-weight: bolder;font-size: 18px;">
                                 {{st.viewValue}} </mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -105,7 +107,7 @@
             <div class="col" style="align-self: center;">
                 <section class="example-section">
                     <mat-checkbox class="example-margin" formControlName="toContinue"
-                        (change)="autoDate($event.checked)" style="font-family: 'Roboto';">דורש
+                        (change)="autoDate($event.checked)" style="font-family: 'math';font-weight: bolder;font-size: 18px;">דורש
                         המשך טיפול</mat-checkbox>
                 </section>
             </div>
@@ -115,7 +117,7 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>משמרת</mat-label>
-                        <b style="font-size: 26px;font-family: 'Roboto';">
+                        <b style="font-size: 26px;font-family: 'math';font-weight: bolder;font-size: 18px;">
                             <input matInput class="form-control" formControlName="ReportShift" type="text" />
                         </b>
                     </mat-form-field>
@@ -125,9 +127,8 @@
             <div class="col-9">
                 <div class="form-group">
                     <mat-form-field>
-                        <textarea matInput rows="3" style="font-size: 15px;font-family: 'Roboto';"
-                            placeholder="תוכן הדוח" class="form-control border-1"
-                            formControlName="ReportText"></textarea>
+                        <textarea matInput rows="3" style="font-size: 15px;font-family: 'math';font-weight: bolder;font-size: 18px;" placeholder="תוכן הדוח"
+                            class="form-control border-1" formControlName="ReportText"></textarea>
                     </mat-form-field>
                 </div>
             </div>
@@ -141,7 +142,7 @@
                             <div class="reply-row" *ngIf="response.FirstName != ''">
                                 <div class="row mt-2">
                                     <div class="col-10">
-                                        <h6 style="font-family: 'Roboto';">
+                                        <h6>
                                             {{response.FirstName}} {{response.LastName}} &nbsp;{{response.UpdateDate}}
                                         </h6>
                                     </div>
@@ -156,7 +157,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <p class="text-right" style="font-family: 'Roboto';">{{response.ResponseText}}</p>
+                                <p class="text-right" style="font-family: 'math';font-weight: bolder;font-size: 18px;">{{response.ResponseText}}</p>
                             </div>
                         </div>
                     </div>
