--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -1,6 +1,9 @@
-<button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
-    <span>&times;</span>
-</button>
+<div class="row" style="justify-content: right;">
+    <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
+        <span>&times;</span>
+    </button>
+</div>
+
 <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
     <h1>{{Dept_Name}}</h1>
 </div>
@@ -38,7 +41,7 @@
                 <div class="col-12">
                     <mat-form-field class="example-full-width" appearance="fill">
                         <mat-label>אבחנה</mat-label>
-                        <textarea matInput style="font-family: 'Roboto';font-size: 15px;" formControlName="Diagnosis"
+                        <textarea matInput style="font-family: 'Roboto';font-size: 20px;font-weight: bolder;" formControlName="Diagnosis"
                             placeholder="אבחנה"></textarea>
                     </mat-form-field>
                 </div>
@@ -48,11 +51,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>נושא/מחלקה</mat-label>
-                            <input type="text" aria-label="department" style="font-family: 'Roboto';" matInput
+                            <input type="text" aria-label="department" style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;" matInput
                                 [formControl]="departmentfilter" [matAutocomplete]="auto2">
                             <mat-autocomplete #auto2="matAutocomplete">
                                 <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
-                                    style="font-family: 'Roboto';">
+                                    style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
                                     {{dept.Dept_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -63,11 +66,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>קטגוריה</mat-label>
-                            <input type="text" aria-label="category" style="font-family: 'Roboto';" matInput
+                            <input type="text" aria-label="category" style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;" matInput
                                 [formControl]="categoryfilter" [matAutocomplete]="auto3">
                             <mat-autocomplete #auto3="matAutocomplete">
                                 <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
-                                    style="font-family: 'Roboto';">
+                                    style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
                                     {{cat.Cat_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -78,11 +81,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>תת קטגוריה</mat-label>
-                            <input type="text" aria-label="subcategory" style="font-family: 'Roboto';" matInput
+                            <input type="text" aria-label="subcategory" style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;" matInput
                                 [formControl]="subcategoryfilter" [matAutocomplete]="auto4">
                             <mat-autocomplete #auto4="matAutocomplete">
                                 <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name"
-                                    style="font-family: 'Roboto';">
+                                    style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
                                     {{subcat.SubCat_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -93,8 +96,8 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>סטטוס</mat-label>
-                            <mat-select formControlName="ReportStatus" style="font-family: 'Roboto';">
-                                <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'Roboto';">
+                            <mat-select formControlName="ReportStatus" style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
+                                <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
                                     {{st.viewValue}} </mat-option>
                             </mat-select>
                         </mat-form-field>
@@ -103,7 +106,7 @@
                 <div class="col" style="align-self: center;">
                     <section class="example-section">
                         <mat-checkbox class="example-margin" formControlName="toContinue"
-                            (change)="autoDate($event.checked)" style="font-family: 'Roboto';">דורש
+                            (change)="autoDate($event.checked)" style="font-family: 'Roboto';font-weight: bolder;font-size: 20px;">דורש
                             המשך טיפול</mat-checkbox>
                     </section>
                 </div>
@@ -113,7 +116,7 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>משמרת</mat-label>
-                            <b style="font-size: 26px;font-family: 'Roboto';">
+                            <b style="font-size: 26px;font-family: 'Roboto';font-weight: bolder;font-size: 18px;">
                                 <input matInput class="form-control" formControlName="ReportShift" type="text" />
                             </b>
                         </mat-form-field>
@@ -122,7 +125,7 @@
                 <div class="col-9">
                     <div class="form-group">
                         <mat-form-field>
-                            <textarea matInput style="font-size: 15px;font-family: 'Roboto';" rows="3"
+                            <textarea matInput style="font-size: 15px;font-family: 'Roboto';font-weight: bolder;font-size: 18px;" rows="3"
                                 placeholder="תוכן הדוח" class="form-control border-1"
                                 formControlName="ReportText"></textarea>
                         </mat-form-field>
