--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -5,6 +5,14 @@
 table {
     width: 100%;
     background-color: aliceblue;
+    font-family: 'Math';
+    font-weight: bolder;
+  }
+
+  h4,.btn.btn-primary{
+    font-family: 'Math';
+    font-weight: bolder;
+    font-size: 18px;
   }
 
   #EventBtn{
@@ -26,11 +34,11 @@ td.mat-cell{
   padding: 0;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .mat-row:nth-child(even){
-  background-color: antiquewhite;
+  background-color: aliceblue;
 }
       
 .mat-row:nth-child(odd){
@@ -39,7 +47,8 @@ td.mat-cell{
 
 [dir=rtl] th.mat-header-cell {
     text-align: center;
-    padding: 10px 5px 10px 30px;
+    padding: 1px 5px 1px 30px;
+    white-space: nowrap;
 }
 
 .close {
@@ -72,8 +81,7 @@ td.mat-cell{
 } */
 
 #generalClinicalBtn{
-  float: left;
-  margin-left: 30px;
+  margin-right: 6px;
 }
 
 #releasedBtn{
@@ -84,7 +92,7 @@ td.mat-cell{
 #details-btn{
   background-color: papayawhip;
   color: black;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'math';
   font-weight: bold;
   font-size: 18px;
 }
