--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -1,117 +1,118 @@
 <div class="my-container">
-  <button type="button" class="close" matTooltip="סגירה" aria-label="Close" *ngIf="ifAdmin == '1'" (click)="closeModal()">
+  <button type="button" class="close" matTooltip="סגירה" aria-label="Close" *ngIf="ifAdmin == '1'"
+    (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
   </button>
   <form class="form" [formGroup]="departmentRelease">
 
     <div class="card text-center" id="table-overflow">
       <h4><b>{{Dept_Name}}</b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+      <div class="row">
+        <table dir="rtl" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <table dir="rtl" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-        <ng-container matColumnDef="nursing">
-          <th mat-header-cell *matHeaderCellDef> תפוסה סיעודית </th>
-          <td mat-cell *matCellDef="let element"> {{element.NursingCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="receipts">
-          <th mat-header-cell *matHeaderCellDef> קבלות </th>
-          <td mat-cell *matCellDef="let element"> <span
-              matTooltip="לילה: {{element.RecieptNight}} ,בוקר: {{element.RecieptMorning}}, ערב: {{element.RecieptEvening}}">{{element.RecieptCount}}</span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="released">
-          <th mat-header-cell *matHeaderCellDef> שחרורים </th>
-          <td mat-cell *matCellDef="let element"> {{element.ReleasedCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="plannedtorelease" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> מתוכננים להשתחרר </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="row">
-              <div class="col-12">
-                <mat-form-field class="example-full-width" appearance="fill">
-                  <input matInput type="number" formControlName="plannedToRelease" style="text-align: center;">
-                </mat-form-field>
+          <ng-container matColumnDef="nursing">
+            <th mat-header-cell *matHeaderCellDef> תפוסה סיעודית </th>
+            <td mat-cell *matCellDef="let element"> {{element.NursingCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="receipts">
+            <th mat-header-cell *matHeaderCellDef> קבלות </th>
+            <td mat-cell *matCellDef="let element"> <span
+                matTooltip="לילה: {{element.RecieptNight}} ,בוקר: {{element.RecieptMorning}}, ערב: {{element.RecieptEvening}}">{{element.RecieptCount}}</span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="released">
+            <th mat-header-cell *matHeaderCellDef> שחרורים </th>
+            <td mat-cell *matCellDef="let element"> {{element.ReleasedCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="plannedtorelease" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> מתוכננים להשתחרר </th>
+            <td mat-cell *matCellDef="let element">
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field class="example-full-width" appearance="fill">
+                    <input matInput type="number" formControlName="plannedToRelease" style="text-align: center;">
+                  </mat-form-field>
+                </div>
               </div>
-            </div>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="holiday" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> בחופשה </th>
-          <td mat-cell *matCellDef="let element"> {{element.HolidayCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="respirators" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> מונשמים </th>
-          <td mat-cell *matCellDef="let element"> {{element.RespiratorsCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="catheter" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> צנתר שתן </th>
-          <td mat-cell *matCellDef="let element"> {{element.CatheterCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="centralcatheter" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> צנתר מרכזי </th>
-          <td mat-cell *matCellDef="let element"> {{element.CentralCatheterCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="isolation" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> בידוד </th>
-          <td mat-cell *matCellDef="let element"> {{element.IsolationCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="phlimitation" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> הגבלה פיזית </th>
-          <td mat-cell *matCellDef="let element"> {{element.PhLimitationCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="death" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> פטירה </th>
-          <td mat-cell *matCellDef="let element"> {{element.DeathCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="kpc" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> CPE </th>
-          <td mat-cell *matCellDef="let element"> {{element.KpcCount}} </td>
-        </ng-container>
-        <ng-container matColumnDef="complex" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-          <th mat-header-cell *matHeaderCellDef> מורכב </th>
-          <td mat-cell *matCellDef="let element"> {{element.ComplexCount}} </td>
-        </ng-container>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="holiday" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> בחופשה </th>
+            <td mat-cell *matCellDef="let element"> {{element.HolidayCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="respirators" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> מונשמים </th>
+            <td mat-cell *matCellDef="let element"> {{element.RespiratorsCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="catheter" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> צנתר שתן </th>
+            <td mat-cell *matCellDef="let element"> {{element.CatheterCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="centralcatheter" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> צנתר מרכזי </th>
+            <td mat-cell *matCellDef="let element"> {{element.CentralCatheterCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="isolation" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> בידוד </th>
+            <td mat-cell *matCellDef="let element"> {{element.IsolationCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="phlimitation" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> הגבלה פיזית </th>
+            <td mat-cell *matCellDef="let element"> {{element.PhLimitationCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="death" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> פטירה </th>
+            <td mat-cell *matCellDef="let element"> {{element.DeathCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="kpc" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> CPE </th>
+            <td mat-cell *matCellDef="let element"> {{element.KpcCount}} </td>
+          </ng-container>
+          <ng-container matColumnDef="complex" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
+            <th mat-header-cell *matHeaderCellDef> מורכב </th>
+            <td mat-cell *matCellDef="let element"> {{element.ComplexCount}} </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+
+
       <div class="row p-3">
-        <div class="col">
-          <button mat-raised-button type="submit" id="releasedBtn" class="btn btn-primary btn-raised" matTooltip="שמירה"
+        <div class="col text-left">
+          <button mat-raised-button type="submit" id="generalClinicalBtn" class="btn btn-primary btn-raised" matTooltip="שמירה"
             (click)="getSubmitPlannedToRealse('1')">
             <i class="material-icons">save</i>
           </button>
           <button matTooltip="דיווח קליני למחלקה" mat-raised-button type="submit" class="btn btn-primary btn-raised"
-            id="generalClinicalBtn" (click)="displayReports('', '', Dept_Name, '', '','','','','','clinical')">
+            id="generalClinicalBtn" (click)="displayReports('', true, Dept_Name, '', '','','','','','clinical')">
             <i class="material-icons">receipt_long</i>
           </button>
-          <button matTooltip="דווח מינהלי" id="EventBtndisplay" mat-raised-button type="submit"
+          <button matTooltip="דווח מינהלי" id="generalClinicalBtn" mat-raised-button type="submit"
             class="btn btn-primary btn-raised"
             (click)="displayReports('',true,Dept_Name,'','','','','','','administrative')">
             <i class="material-icons">assignment_ind</i>
           </button>
-          <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'nibrahim'" mat-raised-button type="submit" class="btn btn-primary btn-raised"
-                (click)="test()">
-                <i class="material-icons">face</i>
-            </button>
+          <button matTooltip="רענון" id="generalClinicalBtn" mat-raised-button type="submit"
+            class="btn btn-primary btn-raised"
+            (click)="ngOnInit()">
+            <i class="material-icons">refresh</i>
+          </button>
+          <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'nibrahim'" mat-raised-button
+            type="submit" class="btn btn-primary btn-raised" (click)="test()">
+            <i class="material-icons">face</i>
+          </button>
         </div>
-        <div class="col">
+        <div class="col text-right">
           <button mat-raised-button type="submit" *ngIf="Dept_Name == 'פנימית א'" class="btn btn-primary btn-raised"
             (click)="getPatientsPerDepart($event,'רנורול')">
             נוירולוגיה: {{numberOfNeurology}}
           </button>
-        </div>
-        <div class="col">
-          <button mat-raised-button type="submit" *ngIf="Dept_Name == 'פנימית א'" class="btn btn-primary btn-raised"
+          <button mat-raised-button type="submit" *ngIf="Dept_Name == 'פנימית א'" class="btn btn-primary btn-raised ml-2"
             (click)="getPatientsPerDepart($event,'רשבצ-מ')">
             שבץ מוחי: {{numberOfCVA}}
           </button>
-        </div>
-        <div class="col">
-          <!-- <button matTooltip="מטופלים במחלקת {{Dept_Name}}" mat-raised-button type="submit"
-            class="btn btn-primary btn-raised" id="EventBtn2" (click)="getPatientsPerDepart($event,'')">
-            <i class="material-icons">arrow_circle_down</i>
-          </button> -->
         </div>
 
       </div>
@@ -155,71 +156,76 @@
         </mat-list>
       </div>
 
-      <table dir="rtl" mat-table [dataSource]="dataSource2" class="mat-elevation-z8" *ngIf="patientsTable">
+      <div class="row">
+        <table dir="rtl" mat-table [dataSource]="dataSource2" class="mat-elevation-z8" *ngIf="patientsTable">
 
-        <ng-container matColumnDef="casenumber">
-          <th mat-header-cell *matHeaderCellDef> מספר מקרה </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_CASE_NUMBER}} </td>
-        </ng-container>
+          <ng-container matColumnDef="casenumber">
+            <th mat-header-cell *matHeaderCellDef> מספר מקרה </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_CASE_NUMBER}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="departmentmedical">
-          <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_DEPART}} </td>
-        </ng-container>
+          <ng-container matColumnDef="departmentmedical">
+            <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_DEPART}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="lastname">
-          <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_LAST_NAME}} </td>
-        </ng-container>
+          <ng-container matColumnDef="lastname">
+            <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_LAST_NAME}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="firstname">
-          <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_FIRST_NAME}} </td>
-        </ng-container>
+          <ng-container matColumnDef="firstname">
+            <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_FIRST_NAME}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="dadname">
-          <th mat-header-cell *matHeaderCellDef> שם אבא </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_FATHER_NAME}} </td>
-        </ng-container>
+          <ng-container matColumnDef="dadname">
+            <th mat-header-cell *matHeaderCellDef> שם אבא </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_FATHER_NAME}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="age">
-          <th mat-header-cell *matHeaderCellDef> גיל </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_DOB}} </td>
-        </ng-container>
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef> גיל </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_DOB}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="gender">
-          <th mat-header-cell *matHeaderCellDef> מין </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_PATIENT_GENDER}} </td>
-        </ng-container>
+          <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef> מין </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_PATIENT_GENDER}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="enterdate">
-          <th mat-header-cell *matHeaderCellDef> תאריך קבלה </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_DATE}} </td>
-        </ng-container>
+          <ng-container matColumnDef="enterdate">
+            <th mat-header-cell *matHeaderCellDef> תאריך קבלה </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_DATE}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="entertime">
-          <th mat-header-cell *matHeaderCellDef> שעת קבלה </th>
-          <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_TIME }} </td>
-        </ng-container>
+          <ng-container matColumnDef="entertime">
+            <th mat-header-cell *matHeaderCellDef> שעת קבלה </th>
+            <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_TIME }} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="displayreports">
-          <th mat-header-cell *matHeaderCellDef> דיווח קליני</th>
-          <td mat-cell *matCellDef="let element"> <button matTooltip="דיווח למטופל" mat-raised-button type="submit"
-              class="btn btn-primary btn-raised"
-              (click)="displayReports(element.PM_CASE_NUMBER,true,Dept_Name,element.PM_FIRST_NAME,element.PM_LAST_NAME,element.PM_PATIENT_GENDER,element.PM_DOB,element.SSP_DESCRIPTION,element.CoronaStatus,'clinical')">
-              <span class="material-icons">
+          <ng-container matColumnDef="displayreports">
+            <th mat-header-cell *matHeaderCellDef> דיווח קליני</th>
+            <td mat-cell *matCellDef="let element"> <button matTooltip="דיווח למטופל" mat-raised-button type="submit"
+                class="btn btn-primary btn-raised"
+                (click)="displayReports(element.PM_CASE_NUMBER,true,Dept_Name,element.PM_FIRST_NAME,element.PM_LAST_NAME,element.PM_PATIENT_GENDER,element.PM_DOB,element.SSP_DESCRIPTION,element.CoronaStatus,'clinical')">
                 <span class="material-icons">
-                  menu_open
+                  <span class="material-icons">
+                    menu_open
+                  </span>
                 </span>
-              </span>
-            </button> </td>
-        </ng-container>
+              </button> </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-        <tr mat-row *matRowDef="let row;let even=even; columns: displayedColumns2;"
-          matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip"
-          matTooltipPosition="before"></tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+          <tr mat-row *matRowDef="let row;let even=even; columns: displayedColumns2;"
+            matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip"
+            matTooltipPosition="before"></tr>
+        </table>
+      </div>
+
+
+
     </div>
   </form>
   <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="loading"></mat-progress-bar>
