--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -3,6 +3,12 @@
     cursor: pointer;
 }
 
+.card-body,.other-cards,.card.dash-cards{
+  font-family: 'Math';
+  font-weight: bolder;
+  font-size: 18px;
+}
+
 .mat-radio-button {
     margin-left: 16px;
   }
@@ -18,6 +24,11 @@
     margin-bottom: 0px;
     border: 2px solid black;
     margin-top: 2px;
+  }
+
+  .card.w-85-p{
+    width: 100%;
+    margin: 0;
   }
 
   table {
@@ -39,8 +50,15 @@
   }
 
   .col-4{
-    border-right: 3px solid;
-    border-left: 3px solid;
+    /* border-right: 3px solid;
+    border-left: 3px solid; */
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .col-4.text-center.colForDash{
+    border-left: 1px solid;
+    border-right: 1px solid;
   }
 
   .coronaNumber{
