--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -8,26 +8,14 @@
                     <div dir="rtl" class="card-body">
                         <form class="form">
                             <div class="row">
-
-                                <div class="col-4 text-center">
+                                <div class="col-4 text-center colForDash">
                                     <div class="row text-center">
-                                        <div class="col-3 text-center">
-                                            <!-- <span class="material-icons" (click)="getEROccupancy('next','hos')">
-                                                navigate_next
-                                            </span> -->
-                                        </div>
-                                        <div class="col-6 text-center">
-                                            <h3><b>תפוסת בית החולים</b></h3>
+                                        <div class="col-12 text-center">
+                                            <h3><b>תפוסת</b><br><b>בית החולים</b></h3>
                                             <h3 style="font-size: 20px;">{{ dateToDisplayString | date: "dd.MM.yyyy"}}
                                             </h3>
                                             <hr>
                                         </div>
-                                        <div class="col-3 text-center">
-                                            <!-- <span class="material-icons" (click)="getEROccupancy('before','hos')">
-                                                navigate_before
-                                            </span> -->
-                                        </div>
-
                                     </div>
                                     <div class="row">
                                         <div class="col-4">
@@ -41,32 +29,32 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-4">
+                                        <div class="col-4 text-center colForDash">
                                             <h5>{{hospitalBedsInUse}}</h5>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-4 text-center colForDash">
                                             <h5>{{Departmints.total}}%</h5>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-4 text-center colForDash">
                                             <h5>{{resparotriesCount}}</h5>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-4 text-center">
+                                <div class="col-4 text-center colForDash">
                                     <div class="row">
-                                        <div class="col-3 text-center">
+                                        <div class="col-2 text-center">
                                             <span class="material-icons" (click)="getEROccupancy('next','er')"
                                                 matTooltip="יום אחרי">
                                                 navigate_next
                                             </span>
                                         </div>
-                                        <div class="col-6 text-center">
-                                            <h3><b>קבלות מחלקה לרפואה דחופה</b></h3>
+                                        <div class="col-8 text-center">
+                                            <h3><b>קבלות מלר"ד</b></h3>
                                             <h3 style="font-size: 20px;"> סה"כ {{allErOccupancy}} &nbsp;&nbsp; {{newDate
                                                 | date: "dd.MM.yyyy"}}</h3>
                                             <h3 style="font-size: 20px;"></h3>
                                         </div>
-                                        <div class="col-3 text-center">
+                                        <div class="col-2 text-center">
                                             <span class="material-icons" (click)="getEROccupancy('before','er')"
                                                 matTooltip="יום לפני">
                                                 navigate_before
@@ -86,12 +74,12 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-4" *ngFor="let occ of ER_Occupancy">
+                                        <div class="col-4 text-center colForDash" *ngFor="let occ of ER_Occupancy">
                                             <h5>{{occ}}</h5>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-4 text-center">
+                                <div class="col-4 text-center colForDash">
                                     <div class="row text-center">
                                         <div class="col-12 text-center">
                                             <h3><b>סטטוס מחלקות מיוחדות</b></h3>
@@ -127,12 +115,12 @@
                     </div>
                 </div>
             </div>
-            <button matTooltip="דווח מינהלי" id="EventBtndisplay" mat-raised-button type="submit" class="btn btn-primary btn-raised"
-                (click)="openReportDialog('administrative')">
+            <button matTooltip="דווח מינהלי" id="EventBtndisplay" mat-raised-button type="submit"
+                class="btn btn-primary btn-raised" (click)="openReportDialog('administrative')">
                 <i class="material-icons">assignment_ind</i>
             </button>
-            <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'" mat-raised-button type="submit" class="btn btn-primary btn-raised"
-                (click)="test()">
+            <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'" mat-raised-button
+                type="submit" class="btn btn-primary btn-raised" (click)="test()">
                 <i class="material-icons">face</i>
             </button>
         </div>
