--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,4 +1,4 @@
-<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup" *ngIf="visible">
+<form dir="rtl" class="form col" id="formBody" [formGroup]="ReportGroup" *ngIf="visible" [style.background]="AdminNurse == '1' ? 'floralwhite':  'aliceblue'">
     <div class="modal-header text-right">
         <div class="row mt-3">
             <div class="col-4">
