--- a/src/app/urgent-surgeries/urgent-surgeries.component.html
+++ b/src/app/urgent-surgeries/urgent-surgeries.component.html
@@ -113,13 +113,17 @@
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="SurgeryName">
-                                <th mat-header-cell *matHeaderCellDef>שם ניתוח</th>
+                                <th mat-header-cell *matHeaderCellDef>
+                                    שם ניתוח
+                                </th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.SurgeryName }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="SurgeryCode">
-                                <th mat-header-cell *matHeaderCellDef>קוד ניתוח</th>
+                                <th mat-header-cell *matHeaderCellDef>
+                                    קוד ניתוח
+                                </th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.SurgeryCode }}
                                 </td>
@@ -183,8 +187,22 @@
                                     יש הערה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    <mat-icon *ngIf="element.Note != null && element.Note != ''" class="green">done</mat-icon>
-                                    <mat-icon *ngIf="element.Note == null || element.Note == ''"  class="red">close</mat-icon>
+                                    <mat-icon
+                                        *ngIf="
+                                            element.Note != null &&
+                                            element.Note != ''
+                                        "
+                                        class="green"
+                                        >done</mat-icon
+                                    >
+                                    <mat-icon
+                                        *ngIf="
+                                            element.Note == null ||
+                                            element.Note == ''
+                                        "
+                                        class="red"
+                                        >close</mat-icon
+                                    >
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="CLICK">
@@ -231,6 +249,108 @@
         </div>
     </div>
 </div>
+<ng-template #surgeriesListModal let-modal>
+    <div class="row">
+        <div class="col-12">
+            <h2 ngbAutofocus class="text-right">
+                רשימת ניתוחים להיום
+            </h2>
+        </div>
+        <div dir="rtl" class="col">
+            <div class="table-responsive">
+                <div class="table-spinner-container">
+                    <mat-form-field>
+                        <input
+                            matInput
+                            (keyup)="applyFilter($event.target.value)"
+                            placeholder="חפש"
+                        />
+                    </mat-form-field>
+                    <table
+                        class="table"
+                        mat-table
+                        [dataSource]="dataSourceForToday"
+                    >
+                        <ng-container matColumnDef="SurgeryID">
+                            <th mat-header-cell *matHeaderCellDef>
+                                מזהה ניתוח
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.SurgeryID }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="PatientNumber">
+                            <th mat-header-cell *matHeaderCellDef>מס' מטופל</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.PatientNumber }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="SurgeryCode">
+                            <th mat-header-cell *matHeaderCellDef>קוד ניתוח</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.SurgeryCode }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="SurgeryName">
+                            <th mat-header-cell *matHeaderCellDef>שם ניתוח</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.SurgeryName }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="Depart">
+                            <th mat-header-cell *matHeaderCellDef>מחלקה</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.Depart }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="SurgeryScheduledDate">
+                            <th mat-header-cell *matHeaderCellDef>
+                                תאריך ניתוח
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.SurgeryScheduledDate }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="SurgeryScheduledTime">
+                            <th mat-header-cell *matHeaderCellDef>שעת ניתוח</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.SurgeryScheduledTime }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="CLICK">
+                            <th mat-header-cell *matHeaderCellDef>הוספה</th>
+                            <td
+                                mat-cell
+                                *matCellDef="let element"
+                                class="text-center"
+                            >
+                                <div class="example-button-container">
+                                    <button
+                                        (click)="add(element)"
+                                        class="row-data"
+                                        mat-mini-fab
+                                        type="button"
+                                        color="primary"
+                                    >
+                                        <mat-icon>add</mat-icon>
+                                    </button>
+                                </div>
+                            </td>
+                        </ng-container>
+                        <tr
+                            mat-header-row
+                            *matHeaderRowDef="displayedColumnsList"
+                        ></tr>
+                        <tr
+                            mat-row
+                            *matRowDef="let row; columns: displayedColumnsList"
+                        ></tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
 <ng-template #addNote let-modal>
     <form
         dir="rtl"
@@ -238,13 +358,57 @@
         [formGroup]="noteForm"
         (ngSubmit)="onSubmit()"
     >
-        <h2 class="text-right" ngbAutofocus>
+        <h2 ngbAutofocus class="text-right" ngbAutofocus>
             פרטי דיווח על ניתוח למקרה - <span> {{ CaseNumber }}</span>
         </h2>
+        <div dir="rtl" class="full-width text-right">
+            <div class="row">
+                <div class="col">
+                    <h5>רשימת הניתוחים שנדחו</h5>
+                    <button
+                        type="button"
+                        id="addBtnU"
+                        (click)="openSurgeriesList(surgeriesListModal, 'surgeriesList', SurgeryID)"
+                        mat-fab
+                        color="primary"
+                    >
+                        <i class="material-icons">add</i>
+                    </button>
+                </div>
+            </div>
+            <div *ngIf="ListToHolde.length > 0" class="row">
+                <div class="col">מס' ניתוח שנדחה</div>
+                <div class="col">תאריך ניתוח</div>
+                <div class="col">קוד ניתוח</div>
+                <div class="col">שם ניתוח</div>
+                <div class="col">מחיקה</div>
+            </div>
+            <div *ngIf="ListToHolde.length > 0" class="full-width">
+                <div
+                    *ngFor="let surgery of ListToHolde; let i = index"
+                    class="row boder-me"
+
+                >
+                    <div class="col">{{ surgery.SurgeryIdToHolde }}</div>
+                    <div class="col">{{ surgery.SurgeryDateToHolde }}</div>
+                    <div class="col">{{ surgery.SurgeryCodeToHolde }}</div>
+                    <div class="col">{{ surgery.SurgeryNameToHolde }}</div>
+                    <div class="col">
+                        <button
+                            mat-mini-fab
+                            color="warn"
+                            (click)="deleteFromList(i)"                            
+                            type="button"
+                        >
+                            <mat-icon>clear</mat-icon>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="full-width">
             <mat-form-field>
                 <textarea
-                    
                     autocomplete="off"
                     matInput
                     placeholder="הערות"
@@ -255,7 +419,7 @@
             </mat-form-field>
         </div>
         <div class="modal-footer text-left">
-            <button type="submit" class="btn btn-outline-dark" >שמור</button>
+            <button type="submit" class="btn btn-outline-dark">שמור</button>
         </div>
     </form>
 </ng-template>
