--- a/src/app/urgent-surgeries/urgent-surgeries.component.html
+++ b/src/app/urgent-surgeries/urgent-surgeries.component.html
@@ -379,6 +379,7 @@
             <div *ngIf="ListToHolde.length > 0" class="row">
                 <div class="col">מס' ניתוח שנדחה</div>
                 <div class="col">תאריך ניתוח</div>
+                <div class="col">שעת ניתוח</div>
                 <div class="col">קוד ניתוח</div>
                 <div class="col">שם ניתוח</div>
                 <div class="col">מחיקה</div>
@@ -391,6 +392,7 @@
                 >
                     <div class="col">{{ surgery.SurgeryIdToHolde }}</div>
                     <div class="col">{{ surgery.SurgeryDateToHolde }}</div>
+                    <div class="col">{{ surgery.SurgeryTimeToHolde }}</div>
                     <div class="col">{{ surgery.SurgeryCodeToHolde }}</div>
                     <div class="col">{{ surgery.SurgeryNameToHolde }}</div>
                     <div class="col">
